cbits/skia_capi/sk_types.h

/**
    A sk_data_ holds an immutable data buffer.
*/
typedef struct sk_data_t sk_data_t;
typedef struct sk_colorspace_icc_profile_t sk_colorspace_icc_profile_t;
typedef enum {
  ZERO_SK_PNGENCODER_FILTER_FLAGS = 0x00,
  NONE_SK_PNGENCODER_FILTER_FLAGS = 0x08,
  SUB_SK_PNGENCODER_FILTER_FLAGS = 0x10,
  UP_SK_PNGENCODER_FILTER_FLAGS = 0x20,
  AVG_SK_PNGENCODER_FILTER_FLAGS = 0x40,
  PAETH_SK_PNGENCODER_FILTER_FLAGS = 0x80,
  ALL_SK_PNGENCODER_FILTER_FLAGS =
      NONE_SK_PNGENCODER_FILTER_FLAGS | SUB_SK_PNGENCODER_FILTER_FLAGS |
      UP_SK_PNGENCODER_FILTER_FLAGS | AVG_SK_PNGENCODER_FILTER_FLAGS |
      PAETH_SK_PNGENCODER_FILTER_FLAGS,
} sk_pngencoder_filterflags_t;
typedef struct {
  sk_pngencoder_filterflags_t fFilterFlags;
  int fZLibLevel;
  void* fComments;
  const sk_colorspace_icc_profile_t* fICCProfile;
  const char* fICCProfileDescription;
} sk_pngencoder_options_t;
typedef enum {
  DOWNSAMPLE_420_SK_JPEGENCODER_DOWNSAMPLE,
  DOWNSAMPLE_422_SK_JPEGENCODER_DOWNSAMPLE,
  DOWNSAMPLE_444_SK_JPEGENCODER_DOWNSAMPLE,
} sk_jpegencoder_downsample_t;
typedef enum {
  IGNORE_SK_JPEGENCODER_ALPHA_OPTION,
  BLEND_ON_BLACK_SK_JPEGENCODER_ALPHA_OPTION,
} sk_jpegencoder_alphaoption_t;
typedef struct {
  int fQuality;
  sk_jpegencoder_downsample_t fDownsample;
  sk_jpegencoder_alphaoption_t fAlphaOption;
  const sk_data_t* xmpMetadata;
  const sk_colorspace_icc_profile_t* fICCProfile;
  const char* fICCProfileDescription;
} sk_jpegencoder_options_t;
typedef enum {
  LOSSY_SK_WEBPENCODER_COMPTRESSION,
  LOSSLESS_SK_WEBPENCODER_COMPTRESSION,
} sk_webpencoder_compression_t;
typedef struct {
  sk_webpencoder_compression_t fCompression;
  float fQuality;
  const sk_colorspace_icc_profile_t* fICCProfile;
  const char* fICCProfileDescription;
} sk_webpencoder_options_t;
typedef struct sk_rrect_t sk_rrect_t;
typedef enum {
  EMPTY_SK_RRECT_TYPE,
  RECT_SK_RRECT_TYPE,
  OVAL_SK_RRECT_TYPE,
  SIMPLE_SK_RRECT_TYPE,
  NINE_PATCH_SK_RRECT_TYPE,
  COMPLEX_SK_RRECT_TYPE,
} sk_rrect_type_t;
typedef enum {
  UPPER_LEFT_SK_RRECT_CORNER,
  UPPER_RIGHT_SK_RRECT_CORNER,
  LOWER_RIGHT_SK_RRECT_CORNER,
  LOWER_LEFT_SK_RRECT_CORNER,
} sk_rrect_corner_t;