src/Skia/Bindings/Types.hsc


@
typedef struct 
{
  sk_pngencoder_filterflags_t fFilterFlags;
  int fZLibLevel;
  void *fComments;
  const sk_colorspace_icc_profile_t *fICCProfile;
  const char *fICCProfileDescription;
} sk_pngencoder_options_t
@
-}
data Sk_pngencoder_options = Sk_pngencoder_options
  { fFilterFlags :: Sk_pngencoder_filterflags -- ^ C field: @"sk_pngencoder_filterflags_t fFilterFlags"@
  , fZLibLevel :: CInt -- ^ C field: @"int fZLibLevel"@
  , fComments :: Ptr (()) -- ^ C field: @"void *fComments"@
  , fICCProfile :: Ptr (Sk_colorspace_icc_profile) -- ^ C field: @"const sk_colorspace_icc_profile_t *fICCProfile"@
  , fICCProfileDescription :: Ptr (CChar) -- ^ C field: @"const char *fICCProfileDescription"@
  }
instance Foreign.Storable.Offset.Offset "fFilterFlags" Sk_pngencoder_options where
  rawOffset = (#offset sk_pngencoder_options_t, fFilterFlags)
instance Foreign.Storable.Offset.Offset "fZLibLevel" Sk_pngencoder_options where
  rawOffset = (#offset sk_pngencoder_options_t, fZLibLevel)
instance Foreign.Storable.Offset.Offset "fComments" Sk_pngencoder_options where
  rawOffset = (#offset sk_pngencoder_options_t, fComments)
instance Foreign.Storable.Offset.Offset "fICCProfile" Sk_pngencoder_options where
  rawOffset = (#offset sk_pngencoder_options_t, fICCProfile)
instance Foreign.Storable.Offset.Offset "fICCProfileDescription" Sk_pngencoder_options where
  rawOffset = (#offset sk_pngencoder_options_t, fICCProfileDescription)
instance Foreign.Storable.Storable Sk_pngencoder_options where
  sizeOf _ = (#size sk_pngencoder_options_t)
  alignment _ = (#alignment sk_pngencoder_options_t)
  peek p' = do
    fFilterFlags <- (#peek sk_pngencoder_options_t, fFilterFlags) p'
    fZLibLevel <- (#peek sk_pngencoder_options_t, fZLibLevel) p'
    fComments <- (#peek sk_pngencoder_options_t, fComments) p'
    fICCProfile <- (#peek sk_pngencoder_options_t, fICCProfile) p'
    fICCProfileDescription <- (#peek sk_pngencoder_options_t, fICCProfileDescription) p'
    pure Sk_pngencoder_options{..}
  poke p' Sk_pngencoder_options{..} = do
    (#poke sk_pngencoder_options_t, fFilterFlags) p' fFilterFlags
    (#poke sk_pngencoder_options_t, fZLibLevel) p' fZLibLevel
    (#poke sk_pngencoder_options_t, fComments) p' fComments
    (#poke sk_pngencoder_options_t, fICCProfile) p' fICCProfile
    (#poke sk_pngencoder_options_t, fICCProfileDescription) p' fICCProfileDescription

{- | C enum: @"sk_jpegencoder_downsample_t"@

@
typedef enum 
{
  DOWNSAMPLE_420_SK_JPEGENCODER_DOWNSAMPLE,
  DOWNSAMPLE_422_SK_JPEGENCODER_DOWNSAMPLE,
  DOWNSAMPLE_444_SK_JPEGENCODER_DOWNSAMPLE
} sk_jpegencoder_downsample_t
@

-}
newtype Sk_jpegencoder_downsample = Sk_jpegencoder_downsample (#type sk_jpegencoder_downsample_t)
  deriving stock (Show, Eq, Ord)
  deriving newtype (Num, Bits, Storable)

-- | C enum @"sk_jpegencoder_downsample_t"@ value (1/3): @"DOWNSAMPLE_420_SK_JPEGENCODER_DOWNSAMPLE"@
pattern DOWNSAMPLE_420_SK_JPEGENCODER_DOWNSAMPLE :: Sk_jpegencoder_downsample
pattern DOWNSAMPLE_420_SK_JPEGENCODER_DOWNSAMPLE = (#const DOWNSAMPLE_420_SK_JPEGENCODER_DOWNSAMPLE)

-- | C enum @"sk_jpegencoder_downsample_t"@ value (2/3): @"DOWNSAMPLE_422_SK_JPEGENCODER_DOWNSAMPLE"@
pattern DOWNSAMPLE_422_SK_JPEGENCODER_DOWNSAMPLE :: Sk_jpegencoder_downsample
pattern DOWNSAMPLE_422_SK_JPEGENCODER_DOWNSAMPLE = (#const DOWNSAMPLE_422_SK_JPEGENCODER_DOWNSAMPLE)

-- | C enum @"sk_jpegencoder_downsample_t"@ value (3/3): @"DOWNSAMPLE_444_SK_JPEGENCODER_DOWNSAMPLE"@
pattern DOWNSAMPLE_444_SK_JPEGENCODER_DOWNSAMPLE :: Sk_jpegencoder_downsample
pattern DOWNSAMPLE_444_SK_JPEGENCODER_DOWNSAMPLE = (#const DOWNSAMPLE_444_SK_JPEGENCODER_DOWNSAMPLE)

{- | C enum: @"sk_jpegencoder_alphaoption_t"@

@
typedef enum 
{
  IGNORE_SK_JPEGENCODER_ALPHA_OPTION,
  BLEND_ON_BLACK_SK_JPEGENCODER_ALPHA_OPTION
} sk_jpegencoder_alphaoption_t
@

-}
newtype Sk_jpegencoder_alphaoption = Sk_jpegencoder_alphaoption (#type sk_jpegencoder_alphaoption_t)
  deriving stock (Show, Eq, Ord)
  deriving newtype (Num, Bits, Storable)

-- | C enum @"sk_jpegencoder_alphaoption_t"@ value (1/2): @"IGNORE_SK_JPEGENCODER_ALPHA_OPTION"@
pattern IGNORE_SK_JPEGENCODER_ALPHA_OPTION :: Sk_jpegencoder_alphaoption
pattern IGNORE_SK_JPEGENCODER_ALPHA_OPTION = (#const IGNORE_SK_JPEGENCODER_ALPHA_OPTION)

-- | C enum @"sk_jpegencoder_alphaoption_t"@ value (2/2): @"BLEND_ON_BLACK_SK_JPEGENCODER_ALPHA_OPTION"@
pattern BLEND_ON_BLACK_SK_JPEGENCODER_ALPHA_OPTION :: Sk_jpegencoder_alphaoption
pattern BLEND_ON_BLACK_SK_JPEGENCODER_ALPHA_OPTION = (#const BLEND_ON_BLACK_SK_JPEGENCODER_ALPHA_OPTION)

{- | C struct: @"sk_jpegencoder_options_t"@

@
typedef struct 
{
  int fQuality;
  sk_jpegencoder_downsample_t fDownsample;
  sk_jpegencoder_alphaoption_t fAlphaOption;
  const sk_data_t *xmpMetadata;
  const sk_colorspace_icc_profile_t *fICCProfile;
  const char *fICCProfileDescription;
} sk_jpegencoder_options_t
@
-}
data Sk_jpegencoder_options = Sk_jpegencoder_options
  { fQuality :: CInt -- ^ C field: @"int fQuality"@
  , fDownsample :: Sk_jpegencoder_downsample -- ^ C field: @"sk_jpegencoder_downsample_t fDownsample"@
  , fAlphaOption :: Sk_jpegencoder_alphaoption -- ^ C field: @"sk_jpegencoder_alphaoption_t fAlphaOption"@
  , xmpMetadata :: Ptr (Sk_data) -- ^ C field: @"const sk_data_t *xmpMetadata"@
  , fICCProfile :: Ptr (Sk_colorspace_icc_profile) -- ^ C field: @"const sk_colorspace_icc_profile_t *fICCProfile"@
  , fICCProfileDescription :: Ptr (CChar) -- ^ C field: @"const char *fICCProfileDescription"@
  }
instance Foreign.Storable.Offset.Offset "fQuality" Sk_jpegencoder_options where
  rawOffset = (#offset sk_jpegencoder_options_t, fQuality)
instance Foreign.Storable.Offset.Offset "fDownsample" Sk_jpegencoder_options where
  rawOffset = (#offset sk_jpegencoder_options_t, fDownsample)
instance Foreign.Storable.Offset.Offset "fAlphaOption" Sk_jpegencoder_options where
  rawOffset = (#offset sk_jpegencoder_options_t, fAlphaOption)
instance Foreign.Storable.Offset.Offset "xmpMetadata" Sk_jpegencoder_options where
  rawOffset = (#offset sk_jpegencoder_options_t, xmpMetadata)
instance Foreign.Storable.Offset.Offset "fICCProfile" Sk_jpegencoder_options where
  rawOffset = (#offset sk_jpegencoder_options_t, fICCProfile)
instance Foreign.Storable.Offset.Offset "fICCProfileDescription" Sk_jpegencoder_options where
  rawOffset = (#offset sk_jpegencoder_options_t, fICCProfileDescription)
instance Foreign.Storable.Storable Sk_jpegencoder_options where
  sizeOf _ = (#size sk_jpegencoder_options_t)
  alignment _ = (#alignment sk_jpegencoder_options_t)
  peek p' = do
    fQuality <- (#peek sk_jpegencoder_options_t, fQuality) p'
    fDownsample <- (#peek sk_jpegencoder_options_t, fDownsample) p'
    fAlphaOption <- (#peek sk_jpegencoder_options_t, fAlphaOption) p'
    xmpMetadata <- (#peek sk_jpegencoder_options_t, xmpMetadata) p'
    fICCProfile <- (#peek sk_jpegencoder_options_t, fICCProfile) p'
    fICCProfileDescription <- (#peek sk_jpegencoder_options_t, fICCProfileDescription) p'
    pure Sk_jpegencoder_options{..}
  poke p' Sk_jpegencoder_options{..} = do
    (#poke sk_jpegencoder_options_t, fQuality) p' fQuality
    (#poke sk_jpegencoder_options_t, fDownsample) p' fDownsample
    (#poke sk_jpegencoder_options_t, fAlphaOption) p' fAlphaOption
    (#poke sk_jpegencoder_options_t, xmpMetadata) p' xmpMetadata
    (#poke sk_jpegencoder_options_t, fICCProfile) p' fICCProfile
    (#poke sk_jpegencoder_options_t, fICCProfileDescription) p' fICCProfileDescription

{- | C enum: @"sk_webpencoder_compression_t"@

@
typedef enum 
{
  LOSSY_SK_WEBPENCODER_COMPTRESSION,
  LOSSLESS_SK_WEBPENCODER_COMPTRESSION
} sk_webpencoder_compression_t
@

-}
newtype Sk_webpencoder_compression = Sk_webpencoder_compression (#type sk_webpencoder_compression_t)
  deriving stock (Show, Eq, Ord)
  deriving newtype (Num, Bits, Storable)

-- | C enum @"sk_webpencoder_compression_t"@ value (1/2): @"LOSSY_SK_WEBPENCODER_COMPTRESSION"@
pattern LOSSY_SK_WEBPENCODER_COMPTRESSION :: Sk_webpencoder_compression
pattern LOSSY_SK_WEBPENCODER_COMPTRESSION = (#const LOSSY_SK_WEBPENCODER_COMPTRESSION)

-- | C enum @"sk_webpencoder_compression_t"@ value (2/2): @"LOSSLESS_SK_WEBPENCODER_COMPTRESSION"@
pattern LOSSLESS_SK_WEBPENCODER_COMPTRESSION :: Sk_webpencoder_compression
pattern LOSSLESS_SK_WEBPENCODER_COMPTRESSION = (#const LOSSLESS_SK_WEBPENCODER_COMPTRESSION)

{- | C struct: @"sk_webpencoder_options_t"@

@
typedef struct 
{
  sk_webpencoder_compression_t fCompression;
  float fQuality;
  const sk_colorspace_icc_profile_t *fICCProfile;
  const char *fICCProfileDescription;
} sk_webpencoder_options_t
@
-}
data Sk_webpencoder_options = Sk_webpencoder_options
  { fCompression :: Sk_webpencoder_compression -- ^ C field: @"sk_webpencoder_compression_t fCompression"@
  , fQuality :: CFloat -- ^ C field: @"float fQuality"@
  , fICCProfile :: Ptr (Sk_colorspace_icc_profile) -- ^ C field: @"const sk_colorspace_icc_profile_t *fICCProfile"@
  , fICCProfileDescription :: Ptr (CChar) -- ^ C field: @"const char *fICCProfileDescription"@
  }
instance Foreign.Storable.Offset.Offset "fCompression" Sk_webpencoder_options where
  rawOffset = (#offset sk_webpencoder_options_t, fCompression)
instance Foreign.Storable.Offset.Offset "fQuality" Sk_webpencoder_options where
  rawOffset = (#offset sk_webpencoder_options_t, fQuality)
instance Foreign.Storable.Offset.Offset "fICCProfile" Sk_webpencoder_options where
  rawOffset = (#offset sk_webpencoder_options_t, fICCProfile)
instance Foreign.Storable.Offset.Offset "fICCProfileDescription" Sk_webpencoder_options where
  rawOffset = (#offset sk_webpencoder_options_t, fICCProfileDescription)
instance Foreign.Storable.Storable Sk_webpencoder_options where
  sizeOf _ = (#size sk_webpencoder_options_t)
  alignment _ = (#alignment sk_webpencoder_options_t)
  peek p' = do
    fCompression <- (#peek sk_webpencoder_options_t, fCompression) p'
    fQuality <- (#peek sk_webpencoder_options_t, fQuality) p'
    fICCProfile <- (#peek sk_webpencoder_options_t, fICCProfile) p'
    fICCProfileDescription <- (#peek sk_webpencoder_options_t, fICCProfileDescription) p'
    pure Sk_webpencoder_options{..}
  poke p' Sk_webpencoder_options{..} = do
    (#poke sk_webpencoder_options_t, fCompression) p' fCompression
    (#poke sk_webpencoder_options_t, fQuality) p' fQuality
    (#poke sk_webpencoder_options_t, fICCProfile) p' fICCProfile
    (#poke sk_webpencoder_options_t, fICCProfileDescription) p' fICCProfileDescription

{- | Opaque C struct: @"sk_rrect_t"@
-}
data Sk_rrect = Sk_rrect

{- | C enum: @"sk_rrect_type_t"@

@
typedef enum 
{
  EMPTY_SK_RRECT_TYPE,
  RECT_SK_RRECT_TYPE,
  OVAL_SK_RRECT_TYPE,
  SIMPLE_SK_RRECT_TYPE,
  NINE_PATCH_SK_RRECT_TYPE,
  COMPLEX_SK_RRECT_TYPE
} sk_rrect_type_t
@

-}
newtype Sk_rrect_type = Sk_rrect_type (#type sk_rrect_type_t)
  deriving stock (Show, Eq, Ord)
  deriving newtype (Num, Bits, Storable)

-- | C enum @"sk_rrect_type_t"@ value (1/6): @"EMPTY_SK_RRECT_TYPE"@
pattern EMPTY_SK_RRECT_TYPE :: Sk_rrect_type
pattern EMPTY_SK_RRECT_TYPE = (#const EMPTY_SK_RRECT_TYPE)

-- | C enum @"sk_rrect_type_t"@ value (2/6): @"RECT_SK_RRECT_TYPE"@
pattern RECT_SK_RRECT_TYPE :: Sk_rrect_type
pattern RECT_SK_RRECT_TYPE = (#const RECT_SK_RRECT_TYPE)

-- | C enum @"sk_rrect_type_t"@ value (3/6): @"OVAL_SK_RRECT_TYPE"@
pattern OVAL_SK_RRECT_TYPE :: Sk_rrect_type
pattern OVAL_SK_RRECT_TYPE = (#const OVAL_SK_RRECT_TYPE)

-- | C enum @"sk_rrect_type_t"@ value (4/6): @"SIMPLE_SK_RRECT_TYPE"@
pattern SIMPLE_SK_RRECT_TYPE :: Sk_rrect_type
pattern SIMPLE_SK_RRECT_TYPE = (#const SIMPLE_SK_RRECT_TYPE)

-- | C enum @"sk_rrect_type_t"@ value (5/6): @"NINE_PATCH_SK_RRECT_TYPE"@
pattern NINE_PATCH_SK_RRECT_TYPE :: Sk_rrect_type
pattern NINE_PATCH_SK_RRECT_TYPE = (#const NINE_PATCH_SK_RRECT_TYPE)

-- | C enum @"sk_rrect_type_t"@ value (6/6): @"COMPLEX_SK_RRECT_TYPE"@
pattern COMPLEX_SK_RRECT_TYPE :: Sk_rrect_type
pattern COMPLEX_SK_RRECT_TYPE = (#const COMPLEX_SK_RRECT_TYPE)

{- | C enum: @"sk_rrect_corner_t"@
